# KVortex

./: .gitignore  CITATION.cff  CMakeLists.txt  COMPLETE.md  FINAL_REPORT.md  INSTALL.md  LICENSE  PHASE1_COMPLETE.md  PROJET_TERMINE.txt  README.md  SECURITY.md  STATUS.md  USAGE_GUIDE.md
bindings/: bindings.cpp
include/kvortex/api/: kvortex.hpp
include/kvortex/cache/: eviction.hpp  index.hpp
include/kvortex/core/: config.hpp  error.hpp  logger.hpp  types.hpp
include/kvortex/memory/: pool.hpp
include/kvortex/storage/: backend.hpp  cpu_backend.hpp
include/kvortex/transfer/: stream_manager.hpp
src/api/: kvortex.cpp
src/cache/: eviction.cpp  index.cpp
src/core/: types.cpp
src/memory/: pool.cpp
src/storage/: cpu_backend.cpp
src/transfer/: stream_manager.cpp
tests/: test_integration.cpp  test_memory.cpp
